# Mathon

./: .gitignore  CMakeLists.txt  LICENSE  Mathon  README.md  VectorTest.hpp  main.cpp
cmakeScripts/: precompile.cmake
src/: CMakeLists.txt  Operators.cppm  ShareModifier.cppm  Signatures.cppm  Utilites.cppm
src/Matrix/Matrix2/: CMakeLists.txt  Matrix2d.cppm  Matrix2f.cppm  Matrix2i.cppm  Matrix2t.cppm
src/Matrix/Matrix3/: CMakeLists.txt  Matrix3i.cppm  Matrix3t.cppm
src/Matrix/Matrix4/: CMakeLists.txt  Matrix4d.cppm  Matrix4f.cppm  Matrix4i.cppm  Matrix4t.cppm
src/Matrix/impl/: CMakeLists.txt  Matrix2.cppm  Matrix3.cppm  Matrix4.cppm
src/Quaternion/: Quaternion.cppm  Quaternion4d.cppm  Quaternion4f.cppm  QuaternionImpl.cppm
src/Vectors/: CMakeLists.txt
src/Vectors/Vector2/: CMakeLists.txt  Vector2d.cppm  Vector2f.cppm  Vector2i.cppm  Vector2t.cppm
src/Vectors/Vector3/: CMakeLists.txt  Vector3d.cppm  Vector3f.cppm  Vector3i.cppm  Vector3t.cppm
src/Vectors/Vector4/: CMakeLists.txt  Vector4d.cppm  Vector4f.cppm  Vector4i.cppm  Vector4t.cppm
src/Vectors/impl/: CMakeLists.txt  Vector2.cppm  Vector3.cppm  Vector4.cppm
test/: MatrixTest.hpp  VectorTest.hpp  main  main.cpp  simpleFrameWork.hpp  test.sh
